@@ -117,13 +117,9 @@ public class LookupService{
   "Saint Barthelemy","Saint Martin", "Bonaire, Saint Eustatius and Saba"};
 
     public LookupService(String databaseFile, int options){
-        try {
-	   this.file = new FileStream(databaseFile, FileMode.Open, FileAccess.Read);
-	   dboptions = options;
-           init();
-        } catch(System.SystemException) {
-           Console.Write("cannot open file " + databaseFile + "\n");
-        }
+        this.file = new FileStream(databaseFile, FileMode.Open, FileAccess.Read);
+        dboptions = options;
+        init();
     }
 
     public LookupService(String databaseFile):this(databaseFile, GEOIP_STANDARD){
