@@ -3,8 +3,10 @@ using System;
 using System.IO;
 class Appa0{
   public static void Main(String[] args){
+    string GeoipDbPath = "/usr/local/share/GeoIP/";
+    string GeoipDb = GeoipDbPath + "GeoIPASNumv6.dat";
     //open the database
-    LookupService ls = new LookupService("/usr/local/share/GeoIP/GeoIPASNumv6.dat", LookupService.GEOIP_STANDARD);
+    LookupService ls = new LookupService(GeoipDb, LookupService.GEOIP_STANDARD);
     //get org of the ip address
     String orgorisp = ls.getOrgV6("2001:4860:0:1001::68");
     Console.Write("asn: " + orgorisp + "\n");
